[Mac] Mirror content settings bubble in RTL.

This layout is spread over 10 nibs, so it would be nice to just redo it
in code. It's a little risky IMO, so not doing it this CL.

BUG=726399

Review-Url: https://codereview.chromium.org/2924353002
Cr-Commit-Position: refs/heads/master@{#478336}

Former-commit-id: 6495c08b5e99164f9dd91c651abcada2a381f72d